--- a/blogs/03_how_to_do_research/index.qmd
+++ b/blogs/03_how_to_do_research/index.qmd
@@ -8,7 +8,7 @@ bibliography: references.bib
 ## Useful Links
 
 |              |                                                                                                                                                                                                                                                                                                                                                                                                                  |
-|---------------------|---------------------------------------------------|
+|--------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | Research     | <a href="https://scholar.google.com" class="btn btn-primary btn-sm" role="button"> Google Scholar </a> <a href="https://library.gwu.edu" class="btn btn-primary btn-sm" role="button"> GWU Library </a> <a href="https://www.connectedpapers.com" class="btn btn-primary btn-sm" role="button"> Connected Papers </a> <a href="https://www.zotero.org" class="btn btn-primary btn-sm" role="button"> Zotero </a> |
 | Coding       | <a href="https://github.com" class="btn btn-info btn-sm" role="button">GitHub</a> <a href="https://desktop.github.com" class="btn btn-info btn-sm" role="button">GitHub Desktop</a> <a href="https://posit.co" class="btn btn-info btn-sm" role="button">RStudio</a>                                                                                                                                             |
 | Note Taking  | <a href="https://quarto.org" class="btn btn-success btn-sm" role="button">Quarto</a> <a href="https://www.craft.do" class="btn btn-success btn-sm" role="button"> Craft Doc </a> <a href="https://www.notion.so" class="btn btn-success btn-sm" role="button"> Notion </a>                                                                                                                                       |
@@ -22,7 +22,7 @@ It encompasses three core aspects:
 
 1.  [Research Methods]
 2.  [Research Tools]
-3.  [Publication & Communication].
+3.  [Publication & Communication](#publication-communication).
 
 ## Introduction
 
@@ -59,7 +59,7 @@ Taking research notes is a highly case-by-case matter. It's purely depending on 
 3.  **Craft Doc**: For some semi-formal notes, I usually record them into my Craft Doc. [Craft](https://www.craft.do) is a note-taking platform compatible with Mac, Windows, and mobile devices. It is similar to [Notion](https://www.notion.so/) but is a bit simpler to deal with. How Craft Doc works is by creating markdown documents and render them in real time.
 4.  **Apple Notes**: For purely informal notes, which might come out during conversations or casual time, I quickly note down with Apple Notes. There is one little trick for Mac: simply moving your cursor to the bottom right corner, you can see a little pop-up of a note page. Click on it and start to write. I record and clear these notes on weekly basis to make sure I have them taken good care of before I totally forget what these graffiti are.
 
-You might want to share some notes with your supervisor or your other teammates. I'll discuss about them in the [**Publication & Communication**] section.
+You might want to share some notes with your supervisor or your other teammates. I'll discuss about them in the [Publication & Communication](#publication-communication) section.
 
 ## Research Tools
 
