--- a/projects/03_bev_smart_charging/index.qmd
+++ b/projects/03_bev_smart_charging/index.qmd
@@ -10,7 +10,7 @@ bibliography: ../references.bib
 
 This project builds a Conjoint Survey on BEV Smart Charging. It utilizes the [`cbctools`](https://jhelvy.github.io/cbcTools/) and [`logitr`](https://jhelvy.github.io/logitr/) packages developed by [Prof John Helveston](https://www.jhelvy.com).
 
-<a href="https://bev.pingfanhu.com" class="btn btn-primary" role="button"> Access the Project </a> <a href="https://jhelvy.github.io/smartcharging/" class="btn btn-info" role="button"> Access the Showcase </a>
+<a href="https://jhelvy.github.io/smartcharging/" class="btn btn-primary" role="button"> Access the Project Showcase </a>
 
 ## Project Overview
 
