--- a/blogs/03_how_to_do_research/index.qmd
+++ b/blogs/03_how_to_do_research/index.qmd
@@ -1,6 +1,7 @@
 ---
 title: "How to Do Research"
 date: "Jan 30, 2024"
+date-modified: "Apr 29, 2024"
 categories: [Research]
 bibliography: references.bib
 ---
@@ -8,7 +9,7 @@ bibliography: references.bib
 ## Useful Links
 
 |               |                                                                                                                                                                                                                                                                                                                                                                                                                  |
-|--------------:|---------------------------------------------------------|
+|----------------:|-------------------------------------------------------|
 |     Research: | <a href="https://scholar.google.com" class="btn btn-primary btn-sm" role="button"> Google Scholar </a> <a href="https://library.gwu.edu" class="btn btn-primary btn-sm" role="button"> GWU Library </a> <a href="https://www.connectedpapers.com" class="btn btn-primary btn-sm" role="button"> Connected Papers </a> <a href="https://www.zotero.org" class="btn btn-primary btn-sm" role="button"> Zotero </a> |
 |       Coding: | <a href="https://github.com" class="btn btn-info btn-sm" role="button">GitHub</a> <a href="https://desktop.github.com" class="btn btn-info btn-sm" role="button">GitHub Desktop</a> <a href="https://posit.co" class="btn btn-info btn-sm" role="button">RStudio</a>                                                                                                                                             |
 |  Note Taking: | <a href="https://quarto.org" class="btn btn-success btn-sm" role="button">Quarto</a> <a href="https://www.craft.do" class="btn btn-success btn-sm" role="button"> Craft Doc </a> <a href="https://www.notion.so" class="btn btn-success btn-sm" role="button"> Notion </a>                                                                                                                                       |
@@ -209,7 +210,7 @@ Craft Doc can be literally used seamlessly, and there are tons of tutorial video
 
 There are many ways to do personal websites. In fact, any software or platform that can generate HTML files can be the candidate of generating personal websites. I use a combination of [Quarto](https://quarto.org), [RStudio](https://posit.co), [GitHub](https://github.com), [Namecheap](https://www.namecheap.com), and [Netlify](https://www.netlify.com) to build my website. Below is the breakdown:
 
-1.  **Quarto** is a code-enabled publishing system, compatible with [R](https://www.r-project.org), [Python](https://www.python.org), [Julia](https://julialang.org), and [Observable](https://observablehq.com). It can be run on [Jupyter Notebook](https://jupyter.org), [RStudio](https://posit.co), and [VS Code](https://code.visualstudio.com). The extension of a Quarto doc is called `qmd`, short for Quarto Markdown. This document, for example is rendered from a `qmd` file.
+1.  **Quarto** is a code-enabled publishing system, compatible with [R](https://www.r-project.org), [Python](https://www.python.org), [Julia](https://julialang.org), and [Observable](https://observablehq.com). It can be run on [Jupyter Notebook](https://jupyter.org), [RStudio](https://posit.co), and [VS Code](https://code.visualstudio.com). The extension of a Quarto doc is called `qmd`, short for Quarto Markdown. This document, for example, is rendered from a `qmd` file.
 2.  **RStudio** is the major IDE that we use for R coding. I use Quarto on RStudio to create and edit my website project and other coding projects.
 3.  **GitHub** is used as an online repository management platform. It's necessary here since Netlify fetches the GitHub repo and deploys the site.
 4.  **Namecheap** is used to buy and manage domains. It also lets you to manage DNS, which is important for linking your domain to Netlify. In fact, I bought [my domain](https://pingfanhu.com) at Namecheap.
