--- a/blogs/04_history_of_logit/index.qmd
+++ b/blogs/04_history_of_logit/index.qmd
@@ -15,10 +15,16 @@ library(here)
 ## Useful Links
 
 |                |                                                                                                                                                                       |
-|-----------------|-------------------------------------------------------|
+|------------------|------------------------------------------------------|
 | Research Paper | <a href="https://papers.tinbergen.nl/02119.pdf" class="btn btn-primary btn-sm" role="button"> The Origins of Logit Regression </a>                                    |
 | Lecture Slides | <a href="https://hw.pingfanhu.com/emse_6035_hw/choice_modeling_slides/1_choice_modeling.pdf" class="btn btn-info btn-sm" role="button"> Intro to Choice Modeling </a> |
 | Online Article | <a href="https://zhuanlan.zhihu.com/p/27188729" class="btn btn-success btn-sm" role="button"> What is Logit (Chinese) </a>                                            |
+
+## Abstract
+
+This blog describes a brief history of the Logit Model.
+
+It starts from the famous Malthus population problem, and explains the necessity of transforming from probability to logit.
 
 ## The Malthus Population Problem
 
@@ -105,11 +111,13 @@ ggplot(data_logit, aes(x = Time, y = Population)) +
 
 This is the "S Curve" we've been seen in a lot of scenarios where there is a designed cap of population due to resource scarcity. There are also other S shaped curves. To avoid ambiguity, we use the term "Logit" instead.
 
+> The CDF of logit model is an S curve. With a visible diminishing return, it is a perfect model for human behavior studies for the purpose of generating a feasible marketing strategy.
+
 ## The Logit Model
 
 ### 1. Probability vs Logit
 
-The traditional way of defining the odds (aka the probability) is to calculate the utility of choosing over the sum of utilities. The equation is written like this:
+The traditional way of defining the probability is to calculate the utility of choosing over the sum of utilities. The equation is written like this:
 
 $$
 P_j = \frac{v_j}{v_j + v_k}
