--- a/projects/01_bev_smart_charging/index.qmd
+++ b/projects/01_bev_smart_charging/index.qmd
@@ -3,7 +3,7 @@ title: "BEV Smart Charging"
 subtitle: "Quantifying the benefits and constraints of BEV Smart Charging adoption."
 author: "Pingfan Hu"
 date: "Sept 07, 2023"
-categories: [Smart Charging, Conjoint]
+categories: [Smart Charging, Survey]
 bibliography: ../references.bib
 ---
 
