--- a/blogs.qmd
+++ b/blogs.qmd
@@ -2,9 +2,7 @@
 title: "Blogs"
 listing:
   contents: blogs
-  sort:
-    - "date desc"
-    - "title desc"
+  sort: "date desc"
   type: default
   categories: true
   sort-ui: false
