--- a/blogs/04_how_to_do_research/index.qmd
+++ b/blogs/04_how_to_do_research/index.qmd
@@ -2,7 +2,7 @@
 title: "How to Do Research"
 date: "Jan 30, 2024"
 date-modified: "Apr 29, 2024"
-categories: [Research]
+categories: [Tutorial]
 bibliography: references.bib
 ---
 
