--- a/blogs/01_master_projects/index.qmd
+++ b/blogs/01_master_projects/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Master Projects"
 date: "May 24, 2023"
-categories: [Network, Data Viz]
+categories: [Data Viz]
 bibliography: ../references.bib
 ---
 
