--- a/blogs/02_how_to_make_a_personal_website/index.qmd
+++ b/blogs/02_how_to_make_a_personal_website/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: "How to Make a Personal Website"
 date: "Dec 29, 2023"
-categories: [Website, Quarto]
+categories: [Tutorial]
 ---
 
 ## Useful Links
